--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,18 +14,21 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-            - '../src/Tests/'
+        resource: '../src/*'
+        exclude: '../src/{DependencyInjection,Entity,Infrastructure/Persistence/Doctrine/Migrations,Tests,Kernel.php}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller/'
+    App\Application\Controller\:
+        resource: '../src/Application/Controller'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Domain\Port\ValidatorGatewayInterface: '@App\Application\Adapter\ValidatorGatewayAdapter'
+
+#    app.listener.exception:
+#        class: 'App\Application\EventListener\ExceptionListener'
+#        tags:
+#            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
