--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,26 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "^1.11",
+        "doctrine/data-fixtures": "^1.4",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
         "symfony/console": "5.1.*",
+        "symfony/css-selector": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/http-client": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.21"
+        "phpunit/phpunit": "^9.4",
+        "symfony/browser-kit": "5.1.*",
+        "symfony/maker-bundle": "^1.21",
+        "symfony/phpunit-bridge": "^5.1",
+        "theofidry/alice-data-fixtures": "^1.3"
     },
     "config": {
         "optimize-autoloader": true,
