--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,16 @@
         "doctrine/orm": "^2.7",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
+        "league/tactician": "^1.0",
+        "league/tactician-bundle": "^1.2",
+        "ramsey/uuid": "^4.1",
         "symfony/console": "5.1.*",
         "symfony/css-selector": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
+        "symfony/uid": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
